unpackaged/main/default/objects/Activity/fields/Call_length_approx_minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_length_approx_minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter approximate number of minutes for the call</description>
    <label>Call length (approx. minutes)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>