unpackaged/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Had Conversation</fullName>
                <default>true</default>
                <label>Had Conversation</label>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Gate Keeper</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>No Longer at the Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>