unpackaged/main/default/objects/Activity/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100, "Key Event/Task Details Captured","Missing: "&amp;IF( LEN( Subject ) &lt; 3,"Quality Subject Description, ","")&amp;""&amp;IF(LEN(WhoId)=0,"Contact/Lead Reference, ","")&amp;""&amp;IF(LEN(WhatId)=0,"Account/Opportunity Reference",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>