unpackaged/main/default/objects/Activity/fields/Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Completed__c</fullName>
    <description>Used in automation to show the date and time and activity was completed.</description>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>