unpackaged/main/default/objects/Activity/fields/Effective_Call__c.field-meta.xml
<CustomField>
    <fullName>Effective_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you talked to the decision-maker (NOT the secretary, voicemail, other gatekeeper)</description>
    <inlineHelpText>Check if you talked to the decision-maker (NOT the secretary, voicemail, other gatekeeper)</inlineHelpText>
    <label>"Effective" Call</label>
    <type>Checkbox</type>
</CustomField>