unpackaged/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>2010 Sales Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fortune 1K</fullName>
            </value>
            <value>
                <fullName>Business Schools</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>